# rust-native-vs-wasm

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
src/: lib.rs
